force-app/main/default/objects/KDCE_DropOutContact__c/KDCE_DropOutContact__c.object-meta.xml
<CustomObject>
    <description>탈퇴 고객 정보를 저장하기 위한 오브젝트</description>
    <label>DropOut Contact</label>
    <nameField>
        <label>DropOut Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DropOut Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>