force-app/main/default/objects/KDCE_DropOutContact__c/fields/AssistantName__c.field-meta.xml
<CustomField>
    <fullName>AssistantName__c</fullName>
    <label>Assistant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>