force-app/main/default/objects/KDCE_DropOutContact__c/fields/CAA_AgeVerificationRequest__c.field-meta.xml
<CustomField>
    <fullName>CAA_AgeVerificationRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Age Verification Request</label>
    <type>Checkbox</type>
</CustomField>