force-app/main/default/objects/KDCE_DropOutContact__c/fields/CAA_Preferredwaytobecontacted__c.field-meta.xml
<CustomField>
    <fullName>CAA_Preferredwaytobecontacted__c</fullName>
    <label>Preferred Way To Be Contacted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>