force-app/main/default/objects/KDCE_DropOutContact__c/fields/CAA_SubType__c.field-meta.xml
<CustomField>
    <fullName>CAA_SubType__c</fullName>
    <label>Contact subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>