force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_AgeVerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>CCR_AgeVerificationStatus__c</fullName>
    <label>Age Verification Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>