force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_Apartment__c.field-meta.xml
<CustomField>
    <fullName>CCR_Apartment__c</fullName>
    <label>Apartment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>