force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_Area__c.field-meta.xml
<CustomField>
    <fullName>CCR_Area__c</fullName>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>