force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_AVCountry__c.field-meta.xml
<CustomField>
    <fullName>CCR_AVCountry__c</fullName>
    <label>AV Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>