force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_Building__c.field-meta.xml
<CustomField>
    <fullName>CCR_Building__c</fullName>
    <label>Building</label>
    <length>255</length>
    <type>Text</type>
</CustomField>