force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_CareOf__c.field-meta.xml
<CustomField>
    <fullName>CCR_CareOf__c</fullName>
    <label>Care Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>