force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_ContactType__c.field-meta.xml
<CustomField>
    <fullName>CCR_ContactType__c</fullName>
    <label>Contact Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>