force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_DatabaseOptin__c.field-meta.xml
<CustomField>
    <fullName>CCR_DatabaseOptin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Database Opt-in</label>
    <type>Checkbox</type>
</CustomField>