force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_Gender__c.field-meta.xml
<CustomField>
    <fullName>CCR_Gender__c</fullName>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>