force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_GlobalAgeVerification__c.field-meta.xml
<CustomField>
    <fullName>CCR_GlobalAgeVerification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Age Verification</label>
    <type>Checkbox</type>
</CustomField>