force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_Latitude__c.field-meta.xml
<CustomField>
    <fullName>CCR_Latitude__c</fullName>
    <description>Latitude and Longitude of the address.</description>
    <label>Address coordinates</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>