force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_MobileCarrier__c.field-meta.xml
<CustomField>
    <fullName>CCR_MobileCarrier__c</fullName>
    <label>Mobile Carrier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>