force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_NickName__c.field-meta.xml
<CustomField>
    <fullName>CCR_NickName__c</fullName>
    <label>Nick Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>