force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_NumberofFollowersFriends__c.field-meta.xml
<CustomField>
    <fullName>CCR_NumberofFollowersFriends__c</fullName>
    <label>Number of Followers Friends</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>