force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_PAF__c.field-meta.xml
<CustomField>
    <fullName>CCR_PAF__c</fullName>
    <label>Postal Address File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>