force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_PersonalIDNumber__c.field-meta.xml
<CustomField>
    <fullName>CCR_PersonalIDNumber__c</fullName>
    <label>Personal ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>