force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_PhoneticLastName__c.field-meta.xml
<CustomField>
    <fullName>CCR_PhoneticLastName__c</fullName>
    <label>Phonetic Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>