force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_QoachProgram__c.field-meta.xml
<CustomField>
    <fullName>CCR_QoachProgram__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qoach Program</label>
    <type>Checkbox</type>
</CustomField>