force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_RegistrationCell__c.field-meta.xml
<CustomField>
    <fullName>CCR_RegistrationCell__c</fullName>
    <label>Registration Cell</label>
    <length>255</length>
    <type>Text</type>
</CustomField>