force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_SocialMediaAccount__c.field-meta.xml
<CustomField>
    <fullName>CCR_SocialMediaAccount__c</fullName>
    <label>Social Media Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>