force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_SocialMediaType__c.field-meta.xml
<CustomField>
    <fullName>CCR_SocialMediaType__c</fullName>
    <label>Social Media Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>