force-app/main/default/objects/KDCE_DropOutContact__c/fields/CCR_StreetNumber__c.field-meta.xml
<CustomField>
    <fullName>CCR_StreetNumber__c</fullName>
    <label>Street Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>