force-app/main/default/objects/KDCE_DropOutContact__c/fields/DTE_IDNumber__c.field-meta.xml
<CustomField>
    <fullName>DTE_IDNumber__c</fullName>
    <label>ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>