force-app/main/default/objects/KDCE_DropOutContact__c/fields/IREFER_Campaign__c.field-meta.xml
<CustomField>
    <fullName>IREFER_Campaign__c</fullName>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>