force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_BlockConsumerReason__c.field-meta.xml
<CustomField>
    <fullName>KDCE_BlockConsumerReason__c</fullName>
    <description>Black Consumer Reason</description>
    <label>Block Consumer Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>