force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_ConvertedConsumer__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ConvertedConsumer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted Consumer</label>
    <type>Checkbox</type>
</CustomField>