force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_DeleteCheckTarget__c.field-meta.xml
<CustomField>
    <fullName>KDCE_DeleteCheckTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Check Target</label>
    <type>Checkbox</type>
</CustomField>