force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_DropoutRequestDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_DropoutRequestDate__c</fullName>
    <label>DropOut Request Date</label>
    <type>DateTime</type>
</CustomField>