force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_ECLoginEmail__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ECLoginEmail__c</fullName>
    <label>E-Commerce Login Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>