force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_EmailOptIn__c.field-meta.xml
<CustomField>
    <fullName>KDCE_EmailOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email (Channel Opt In)</label>
    <type>Checkbox</type>
</CustomField>