force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_FirstAddressLv2__c.field-meta.xml
<CustomField>
    <fullName>KDCE_FirstAddressLv2__c</fullName>
    <label>First Address Lv2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>