force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_fm_LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_LastActivityDate__c</fullName>
    <description>마지막 활동일</description>
    <label>Last Activity Date</label>
    <type>DateTime</type>
</CustomField>