force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_GodFather__c.field-meta.xml
<CustomField>
    <fullName>KDCE_GodFather__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>God Father</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>DropOutContactGodFather</relationshipName>
    <type>Lookup</type>
</CustomField>