force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_HardDeletionTarget__c.field-meta.xml
<CustomField>
    <fullName>KDCE_HardDeletionTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KDCE_HardDeletionTarget</label>
    <type>Checkbox</type>
</CustomField>