force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_HasRegistedUsingKakaoId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_HasRegistedUsingKakaoId__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Registered using KAKAO Account</label>
    <type>Checkbox</type>
</CustomField>