force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_InformationOptInDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_InformationOptInDate__c</fullName>
    <label>Information Opt-in Change Date</label>
    <type>DateTime</type>
</CustomField>