force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_IqosUP__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IqosUP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IQOS UP</label>
    <type>Checkbox</type>
</CustomField>