force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_IsBlockConsumer__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsBlockConsumer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Block Consumer</label>
    <type>Checkbox</type>
</CustomField>