force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_IsMGMIssue__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsMGMIssue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MGM Coupon Issue</label>
    <type>Checkbox</type>
</CustomField>