force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_IsStoreContact__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsStoreContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Contact</label>
    <type>Checkbox</type>
</CustomField>