force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_KakaoId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_KakaoId__c</fullName>
    <label>KAKAO Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>