force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_LastCRMResponseDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastCRMResponseDate__c</fullName>
    <label>Last CRM Survey Response Date</label>
    <type>DateTime</type>
</CustomField>