force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_LastDeviceLinkDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastDeviceLinkDate__c</fullName>
    <label>Last Device Registration Date</label>
    <type>DateTime</type>
</CustomField>