force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_LastNPSResponseDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastNPSResponseDate__c</fullName>
    <label>Last NPS Survey Response Date</label>
    <type>DateTime</type>
</CustomField>