force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_LastOfflineProgramDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastOfflineProgramDate__c</fullName>
    <label>Last Offline Program Date</label>
    <type>DateTime</type>
</CustomField>