force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_LastPurchaseChannel__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastPurchaseChannel__c</fullName>
    <label>Last Purchase Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CVS</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Manned</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Trade-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>