force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_LAUChangeDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LAUChangeDate__c</fullName>
    <label>LAU Change Date</label>
    <type>DateTime</type>
</CustomField>