force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_MarketingOptIn__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MarketingOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Opt-In</label>
    <type>Checkbox</type>
</CustomField>