force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_MGMCode__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MGMCode__c</fullName>
    <label>KDCE_MGMCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>