force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_MGMUseCount__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MGMUseCount__c</fullName>
    <label>MGM Coupon Use Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>