force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_MigId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MigId__c</fullName>
    <label>Mig Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>