force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_MobileCarrier__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MobileCarrier__c</fullName>
    <label>Mobile Carrier (KDCE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>