force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_Name__c.field-meta.xml
<CustomField>
    <fullName>KDCE_Name__c</fullName>
    <label>Name (No Mask)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>