force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_NamePNEMKey__c.field-meta.xml
<CustomField>
    <fullName>KDCE_NamePNEMKey__c</fullName>
    <label>Contact Key (Name, Phone Number, Email)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>