force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_OldMarketingOptIn__c.field-meta.xml
<CustomField>
    <fullName>KDCE_OldMarketingOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Marketing Opt-in</label>
    <type>Checkbox</type>
</CustomField>