force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_ShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ShippingStreet__c</fullName>
    <label>Shipping Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>