force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_Store__c.field-meta.xml
<CustomField>
    <fullName>KDCE_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>KDCE_Store__c</referenceTo>
    <relationshipName>DropOutContact</relationshipName>
    <type>Lookup</type>
</CustomField>