force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_ThirdAddressLv1__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ThirdAddressLv1__c</fullName>
    <label>Third Address Lv1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>