force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_ThirdAddressPostal__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ThirdAddressPostal__c</fullName>
    <label>Third Address Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>