force-app/main/default/objects/KDCE_DropOutContact__c/fields/KDCE_TnCVersion__c.field-meta.xml
<CustomField>
    <fullName>KDCE_TnCVersion__c</fullName>
    <label>T&amp;C Version</label>
    <length>18</length>
    <type>Text</type>
</CustomField>