force-app/main/default/objects/KDCE_DropOutContact__c/fields/LastCUUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>LastCUUpdateDate__c</fullName>
    <label>Last Stay-in-Touch Save Date</label>
    <type>DateTime</type>
</CustomField>