force-app/main/default/objects/KDCE_DropOutContact__c/fields/MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>MailingAddress__c</fullName>
    <label>Mailing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>