force-app/main/default/objects/KDCE_DropOutContact__c/fields/OtherAddress__c.field-meta.xml
<CustomField>
    <fullName>OtherAddress__c</fullName>
    <label>Other Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>