force-app/main/default/objects/KDCE_DropOutContact__c/fields/OtherCity__c.field-meta.xml
<CustomField>
    <fullName>OtherCity__c</fullName>
    <label>OtherCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>