force-app/main/default/objects/KDCE_DropOutContact__c/fields/ReportsToId__c.field-meta.xml
<CustomField>
    <fullName>ReportsToId__c</fullName>
    <label>Reports To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>